// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/card/demo/basic.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:300px"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card title
      </div>
      <div
        class="ant-card-extra"
      >
        <a
          href="#"
        >
          More
        </a>
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`renders ./components/card/demo/border-less.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-card"
    style="width:300px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/flexible-content.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable"
  style="width:240px"
>
  <div
    class="ant-card-cover"
  >
    <img
      alt="example"
      src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png"
    />
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-meta"
    >
      <div
        class="ant-card-meta-detail"
      >
        <div
          class="ant-card-meta-title"
        >
          Europe Street beat
        </div>
        <div
          class="ant-card-meta-description"
        >
          www.instagram.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/grid-card.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-contain-grid"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/in-column.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px"
  >
    <div
      class="ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
    <div
      class="ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
    <div
      class="ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/inner.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <p
      style="font-size:14px;color:rgba(0, 0, 0, 0.85);margin-bottom:16px;font-weight:500"
    >
      Group title
    </p>
    <div
      class="ant-card ant-card-bordered ant-card-type-inner"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="ant-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        Inner Card content
      </div>
    </div>
    <div
      class="ant-card ant-card-bordered ant-card-type-inner"
      style="margin-top:16px"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="ant-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        Inner Card content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/loading.md correctly 1`] = `
<div>
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
  <div
    class="ant-card ant-card-bordered"
    style="width:300px;margin-top:16px"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active"
      >
        <div
          class="ant-skeleton-header"
        >
          <span
            class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
          />
        </div>
        <div
          class="ant-skeleton-content"
        >
          <h3
            class="ant-skeleton-title"
            style="width:50%"
          />
          <ul
            class="ant-skeleton-paragraph"
          >
            <li
              style="width:100%"
            />
            <li
              style="width:100%"
            />
          </ul>
        </div>
      </div>
    </div>
    <ul
      class="ant-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <i
            class="anticon anticon-setting"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="setting"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
              />
              <path
                d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
              />
            </svg>
          </i>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <i
            class="anticon anticon-edit"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="edit"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M924 888H100c-19.9 0-36 16.1-36 36s16.1 36 36 36h824c19.9 0 36-16.1 36-36s-16.1-36-36-36zM296 770l235.5-99.7c3.8-1.6 7.2-3.9 10.2-6.8l397.2-397.2c28.1-28.1 28.3-73.9.2-102L859.8 85c-28.1-28.1-73.9-27.9-102 .2L360.6 482.4c-2.9 2.9-5.2 6.4-6.8 10.2L254 728c-5.6 13.2-1.7 26.5 6.8 35.1s21.9 12.5 35.2 6.9zm512.7-633.9l.2-.2 79.2 79.2-.2.2-62 62-79.2-79.2 62-62zM417 527.8L695.8 249l79.2 79.2L496.2 607l-137.4 58.2L417 527.8z"
              />
            </svg>
          </i>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <i
            class="anticon anticon-ellipsis"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M128 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM448 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM768 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0z"
              />
            </svg>
          </i>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/card/demo/meta.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:300px"
>
  <div
    class="ant-card-cover"
  >
    <img
      alt="example"
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
    />
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-meta"
    >
      <div
        class="ant-card-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-card-meta-detail"
      >
        <div
          class="ant-card-meta-title"
        >
          Card title
        </div>
        <div
          class="ant-card-meta-description"
        >
          This is the description
        </div>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-setting"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="setting"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
            />
            <path
              d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
            />
          </svg>
        </i>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-edit"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="edit"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M924 888H100c-19.9 0-36 16.1-36 36s16.1 36 36 36h824c19.9 0 36-16.1 36-36s-16.1-36-36-36zM296 770l235.5-99.7c3.8-1.6 7.2-3.9 10.2-6.8l397.2-397.2c28.1-28.1 28.3-73.9.2-102L859.8 85c-28.1-28.1-73.9-27.9-102 .2L360.6 482.4c-2.9 2.9-5.2 6.4-6.8 10.2L254 728c-5.6 13.2-1.7 26.5 6.8 35.1s21.9 12.5 35.2 6.9zm512.7-633.9l.2-.2 79.2 79.2-.2.2-62 62-79.2-79.2 62-62zM417 527.8L695.8 249l79.2 79.2L496.2 607l-137.4 58.2L417 527.8z"
            />
          </svg>
        </i>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-ellipsis"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M128 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM448 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM768 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0z"
            />
          </svg>
        </i>
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/card/demo/simple.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:300px"
>
  <div
    class="ant-card-body"
  >
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`renders ./components/card/demo/tabs.md correctly 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
      <div
        class="ant-tabs ant-tabs-top ant-card-head-tabs ant-tabs-large ant-tabs-line"
      >
        <div
          class="ant-tabs-bar ant-card-head-tabs"
          role="tablist"
          tabindex="0"
        >
          <div
            class="ant-tabs-nav-container"
          >
            <span
              class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-prev-icon"
              >
                <i
                  class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="left"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <span
              class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-next-icon"
              >
                <i
                  class="anticon anticon-right ant-tabs-tab-next-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-scroll"
              >
                <div
                  class="ant-tabs-nav ant-tabs-nav-animated"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      aria-selected="true"
                      class="ant-tabs-tab-active ant-tabs-tab"
                      role="tab"
                    >
                      tab1
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      tab2
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-tabs-content ant-tabs-content-animated"
          style="margin-left:0%"
        >
          <div
            aria-hidden="false"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
          />
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        content1
      </p>
    </div>
  </div>
  <br />
  <br />
  <div
    class="ant-card ant-card-bordered ant-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      />
      <div
        class="ant-tabs ant-tabs-top ant-card-head-tabs ant-tabs-large ant-tabs-line"
      >
        <div
          class="ant-tabs-bar ant-card-head-tabs"
          role="tablist"
          tabindex="0"
        >
          <div
            class="ant-tabs-nav-container"
          >
            <span
              class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-prev-icon"
              >
                <i
                  class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="left"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <span
              class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-next-icon"
              >
                <i
                  class="anticon anticon-right ant-tabs-tab-next-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-scroll"
              >
                <div
                  class="ant-tabs-nav ant-tabs-nav-animated"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      article
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="true"
                      class="ant-tabs-tab-active ant-tabs-tab"
                      role="tab"
                    >
                      app
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      project
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-tabs-content ant-tabs-content-animated"
          style="margin-left:-100%"
        >
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
          <div
            aria-hidden="false"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
          />
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        app content
      </p>
    </div>
  </div>
</div>
`;
